@@ -27,6 +27,7 @@ class views_handler_argument_string extends views_handler_argument {
     $options['case'] = array('default' => 'none');
     $options['path_case'] = array('default' => 'none');
     $options['transform_dash'] = array('default' => FALSE);
+    $options['break_phrase'] = array('default' => FALSE);
 
     if (!empty($this->definition['many to one'])) {
       $options['add_table'] = array('default' => FALSE);
@@ -103,6 +104,14 @@ class views_handler_argument_string extends views_handler_argument {
         '#default_value' => !empty($this->options['require_value']),
       );
     }
+ 
+    // allow + for or, , for and
+    $form['break_phrase'] = array(
+      '#type' => 'checkbox',
+      '#title' => t('Allow multiple terms per argument.'),
+      '#description' => t('If selected, users can enter multiple arguments in the form of 1+2+3 or 1,2,3.'),
+      '#default_value' => !empty($this->options['break_phrase']),
+    );
   }
 
   /**
@@ -157,11 +166,18 @@ class views_handler_argument_string extends views_handler_argument {
     }
     $this->placeholder_length = $this->placeholder();
 
+    if (!empty($this->options['break_phrase'])) {
+      views_break_phrase_string($argument, $this);
+    }
+    else {
+      $this->value = array($argument);
+      $this->operator = 'or';
+    }
+
     if (!empty($this->definition['many to one'])) {
       if (!empty($this->options['glossary'])) {
         $this->helper->formula = TRUE;
       }
-      $this->value = array($argument);
       $this->helper->ensure_my_table();
 
       $this->helper->placeholders = array($this->placeholder_length => intval($this->options['limit']));
@@ -179,10 +195,23 @@ class views_handler_argument_string extends views_handler_argument {
       $field = $this->get_formula();
     }
 
+    if (count($this->value) > 1) {
+      $operator = 'IN';
+      $argument = $this->value;
+    }
+    else {
+      $operator = '=';
+    }
+
     if ($formula) {
       $placeholder = $this->placeholder();
       $placeholder_length = $this->placeholder_length;
-      $field .= ' = ' . $placeholder;
+      if ($operator == 'IN') {
+        $field .= " IN($placeholder)";
+      }
+      else {
+        $field .= ' = ' . $placeholder;
+      }
       $placeholders = array(
         $placeholder_length => intval($this->options['limit']),
         $placeholder => $argument,
@@ -190,7 +219,7 @@ class views_handler_argument_string extends views_handler_argument {
       $this->query->add_where_expression(0, $field, $placeholders);
     }
     else {
-      $this->query->add_where(0, $field, $argument);
+      $this->query->add_where(0, $field, $argument, $operator);
     }
   }
 
@@ -224,12 +253,35 @@ class views_handler_argument_string extends views_handler_argument {
   }
 
   function title() {
-    $title = $this->case_transform($this->argument, 'case');
+    $this->argument = $this->case_transform($this->argument, 'case');
     if (!empty($this->options['transform_dash'])) {
-      $title = strtr($title, '-', ' ');
+      $this->argument = strtr($this->argument, '-', ' ');
     }
 
-    return check_plain($title);
+    if (!empty($this->options['break_phrase'])) {
+      views_break_phrase($this->argument, $this);
+    }
+    else {
+      $this->value = array($this->argument);
+      $this->operator = 'or';
+    }
+
+    if (empty($this->value)) {
+      return !empty($this->definition['empty field name']) ? $this->definition['empty field name'] : t('Uncategorized');
+    }
+
+    if ($this->value === array(-1)) {
+      return !empty($this->definition['invalid input']) ? $this->definition['invalid input'] : t('Invalid input');
+    }
+
+    return implode($this->operator == 'or' ? ' + ' : ', ', $this->title_query());
+  }
+  
+  /**
+   * Override for specific title lookups.
+   */
+  function title_query() {
+    return check_plain($this->value);
   }
 
   function summary_name($data) {
